<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.com.rk</groupId>
    <artifactId>project-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>project-entities</module>
        <module>project-api</module>
        <module>project-services</module>
        <module>project-repositories</module>
        <module>project-basics</module>
    </modules>

    <properties>
        <!-- Configurações do Projeto -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <skip.unit.tests>false</skip.unit.tests>
        <skip.integration.tests>false</skip.integration.tests>

        <!-- Versão dos plugins -->
        <maven-war-plugin.version>2.6</maven-war-plugin.version>

        <!-- Versão das dependências de teste -->
        <hsqldb.version>2.4.1</hsqldb.version>
        <mockito-all.version>1.10.19</mockito-all.version>

        <!-- Versão das dependências do projeto -->
        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
        <commons-lang3.version>3.7</commons-lang3.version>
    </properties>

    <repositories>
        <repository>
            <id>spring-repo</id>
            <name>Spring Maven Repository</name>
            <url>https://repo.spring.io/release/</url>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/libs-milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <!-- Build -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <!-- Preparar a cobertura dos testes unitários -->
                    <execution>
                        <id>pre-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
                            <propertyName>UTestArgLine</propertyName>
                        </configuration>
                    </execution>
                    <!-- Reportanto a cobertura dos testes unitários -->
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.15</version>
                <configuration>
                    <skip>true</skip>
                    <!-- Skips unit tests if the value of skip.unit.tests property is true -->
                    <skipTests>${skip.unit.tests}</skipTests>
                    <argLine>-XX:-UseSplitVerifier</argLine>
                </configuration>
                <executions>
                    <!-- unit tests execution -->
                    <execution>
                        <id>unit-tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <argLine>${UTestArgLine} -Xmx512m -XX:MaxPermSize=256m</argLine>
                            <skip>${skip.unit.tests}</skip>
                            <!-- Excludes integration tests when unit tests are run. -->
                            <excludes>
                                <exclude>**/*ITCase.java</exclude>
                            </excludes>
                        </configuration>
                    </execution>

                    <!-- integration tests execution -->
                    <execution>
                        <id>integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                            <skip>${skip.integration.tests}</skip>
                            <!-- Includes only integration tests when unit tests are run. ß -->
                            <includes>
                                <include>**/*ITCase.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- http://maven.apache.org/plugins/maven-site-plugin/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <locales>pt_BR</locales>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-descriptor</id>
                        <goals>
                            <goal>attach-descriptor</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Cobertura to use codecov.io -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <formats>
                        <format>html</format>
                        <format>xml</format>
                    </formats>
                    <check/>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven-war-plugin.version}</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                        <archive>
                            <manifest>
                                <mainClass>br.com.pacto.crm.Application</mainClass>
                            </manifest>
                        </archive>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>verify</phase>
                            <goals>
                                <goal>war</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <phase>verify</phase>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.ftl</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito-all.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Used to bootstrap application, change to test scope when build projects using this architecture -->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>${hsqldb.version}</version>
            <!--<scope>test</scope>-->
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Projeto -->
            <dependency>
                <groupId>br.com.rk</groupId>
                <artifactId>project-basics</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>br.com.rk</groupId>
                <artifactId>project-entities</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>br.com.rk</groupId>
                <artifactId>project-repositories</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>br.com.rk</groupId>
                <artifactId>project-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>br.com.rk</groupId>
                <artifactId>project-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Spring -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Commons Lang 3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>